--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.3.4",
     "bootstrap": "^5.3.0-alpha1",
     "bootstrap-icons": "^1.10.3",
+    "json-server": "^0.17.2",
     "mdb-ui-kit": "^6.2.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
